syntax = "proto3";

package template;

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    string csrf_token = 3;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string csrf_token = 2;
    string refresh_token = 3;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {
    bool success = 1;
}

message User {
    int32 id = 1;
    string username = 2;
    optional string password = 3;
    int32 roleFk = 4;
    optional string avatar = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp lastLogin = 7;
}

message StatusRequest {
    string access_token = 1;
    string csrf_token = 2;
}

service AuthService{
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc Status(StatusRequest) returns (User);
}